# ur10_kinematics

./: README.md
ur10_6dof_kinematics/: CMakeLists.txt  package.xml
ur10_6dof_kinematics/src/: forward_kinematics.cpp  inverse_kinematics.cpp
